# CLI

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: argmunents.rs  arguments.rs  helper.rs  main.rs  module_manager.rs  printer.rs
