[package]
name = "lecturecut"
version = "0.1.0"

[dependencies]
console = "0.15.8"
indicatif = "0.17.3"
libloading = "0.8.0"
tree_magic = "0.2.3"
once_cell = "1.17.1"
ellipse = "0.2.0"
clap = { version = "4.5.1", features = ["color", "help", "usage", "error-context", "suggestions", "wrap_help", "string"] }
tabled = "0.15.0"
